fix(styles): fix mobile menu horizontal scroll

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -127,13 +127,11 @@
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
+
       align-items: center;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
+
       justify-content: center;
-      -webkit-transition: 0.2s cubic-bezier(0, 0, 0.3642, 1);
+
       transition: 0.2s cubic-bezier(0, 0, 0.3642, 1);
     }
 
@@ -164,7 +162,7 @@
       opacity: 0;
       visibility: hidden;
       padding: 0;
-      position: sticky;
+      position: fixed;
       height: 100dvh;
       width: 100dvw;
       top: 0;
